objects/SVMXC__Service_Order_Line__c.object
<CustomObject>
    <fields>
        <fullName>BD_Discount_Type__c</fullName>
        <description>The Product / Discount Type applied to the line, based on the Product and Contract Discount Exceptions</description>
        <inlineHelpText>The Product / Discount Type applied to the line, based on the Product and Contract Discount Exceptions</inlineHelpText>
        <label>Discount Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_Eligible_for_Return__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible for Return</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BD_Fault_Code_Family__c</fullName>
        <label>Fault Code Family</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_Product_Plant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Plant</label>
        <referenceTo>SMAX_PS_ProductPlant__c</referenceTo>
        <relationshipLabel>Work Details</relationshipLabel>
        <relationshipName>Work_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BD_Return_Part_Number__c</fullName>
        <label>Return Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ActionFaultCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action Code</label>
        <referenceTo>SMAX_PS_Fault_Code__c</referenceTo>
        <relationshipLabel>Work Details (Action Fault Code)</relationshipLabel>
        <relationshipName>Work_Detail_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Approval_Required__c</fullName>
        <description>Indicates if the estimate line requires approval.</description>
        <formula>RecordType.DeveloperName = &quot;Estimate&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CalculatedLinePrice__c</fullName>
        <description>2018-05-17 Maples Edited to move * QTy to end and paren around 1st 2 blocks to calculate properly
2018-07-30 VanLoon - Reverting the changes Maples made for SVMXCFG-683</description>
        <formula>/* Start with the Replacement Base Price if not blank.. */ 
BLANKVALUE(SMAX_PS_ReplacementBasePrice__c, 
/* OR the Actual Price - Contract Discount */ 
(SVMXC__Actual_Price2__c * 
(1.0 - (BLANKVALUE(SMAX_PS_ContractPercentDiscount__c, 0.00) / 100)) )) 
/* Multiply by Qty */ 
* SVMXC__Actual_Quantity2__c 

/* Next Apply the Service Percent Adjustment */ 
* IF (ISBLANK(SMAX_PS_ServicePercentAdjustment__c), 
1.0, 
IF (ISPICKVAL(SMAX_PS_ServicePercentAdjustmentType__c, &quot;Discount&quot;), 
1.0 - (SMAX_PS_ServicePercentAdjustment__c / 100), 
1.0 + (SMAX_PS_ServicePercentAdjustment__c / 100) 
) 
) 

/* Next Apply the Service Amount Adjustment */ 
+ IF (ISBLANK(SMAX_PS_ServiceAmountAdjustment__c), 
0.0, 
IF (ISPICKVAL(SMAX_PS_ServiceAmountAdjustmentType__c, &quot;Discount&quot;), 
(-1.0 * SMAX_PS_ServiceAmountAdjustment__c), 
SMAX_PS_ServiceAmountAdjustment__c 
) 
)</formula>
        <label>Calculated Line Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Calculated_Discount__c</fullName>
        <formula>IF (ISPICKVAL(SMAX_PS_ServicePercentAdjustmentType__c, &quot;Discount&quot;), 
TEXT(SMAX_PS_ServicePercentAdjustment__c) +&quot;%&quot;, 
IF (ISPICKVAL(SMAX_PS_ServiceAmountAdjustmentType__c, &quot;Discount&quot;), 
SVMXC__Service_Order__r.SMAX_PS_Currency_Symbol__c +&quot; &quot;+ TEXT(SMAX_PS_ServiceAmountAdjustment__c), 
NULL 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Discount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Calculated_Line_Discount__c</fullName>
        <formula>IF (SVMXC__Total_Line_Price__c - SMAX_PS_CalculatedLinePrice__c &gt;0,
     SVMXC__Total_Line_Price__c - SMAX_PS_CalculatedLinePrice__c,
     NULL
     )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Line Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Calculated_Unit_Price__c</fullName>
        <description>2018-07-30 VanLoon - Added / Qty for SVMXCFG-683</description>
        <formula>/* Start with the Replacement Base Price if not blank and not 0.. */
(IF ( AND( NOT(ISBLANK(SMAX_PS_ReplacementBasePrice__c)), 
                SMAX_PS_ReplacementBasePrice__c &lt;&gt; 0),
       SMAX_PS_ReplacementBasePrice__c,
/* OR the Actual Price - Contract Discount */
       (SVMXC__Actual_Price2__c *
       (1.0 - (BLANKVALUE(SMAX_PS_ContractPercentDiscount__c, 0.00) / 100)) )
      )
 
/* Next Apply the Service Amount Adjustment */
 + IF (ISBLANK(SMAX_PS_ServiceAmountAdjustment__c),
         0.0,
         IF (ISPICKVAL(SMAX_PS_ServiceAmountAdjustmentType__c, &quot;Discount&quot;),
             (-1.0 * SMAX_PS_ServiceAmountAdjustment__c),
             SMAX_PS_ServiceAmountAdjustment__c
             ) / SVMXC__Actual_Quantity2__c
         )
)
/* Next Apply the Service Percent Adjustment */
 * IF (ISBLANK(SMAX_PS_ServicePercentAdjustment__c),
        1.0,
        IF (ISPICKVAL(SMAX_PS_ServicePercentAdjustmentType__c, &quot;Discount&quot;),
             1.0 - (SMAX_PS_ServicePercentAdjustment__c / 100),
             1.0 + (SMAX_PS_ServicePercentAdjustment__c / 100)
            )
        )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Calibrated_Tool__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Calibrated Tool</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SVMXC__Installed_Product__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Calibrated Tools</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Work Details (Calibrated Tool)</relationshipLabel>
        <relationshipName>Work_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Cancel_Line__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for indicating that a line should be cancelled in SAP.</description>
        <inlineHelpText>Used for indicating that a line should be cancelled in SAP.</inlineHelpText>
        <label>Cancel Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Cancel_Reason__c</fullName>
        <description>Denotes the cancel reason for the lines</description>
        <inlineHelpText>Denotes the cancel reason for the lines</inlineHelpText>
        <label>Cancel Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Incorrect Dates/times</fullName>
                </value>
                <value>
                    <fullName>Incorrect Hours</fullName>
                </value>
                <value>
                    <fullName>Incorrect Activity type</fullName>
                </value>
                <value>
                    <fullName>Incorrect Work Description</fullName>
                </value>
                <value>
                    <fullName>Customer complaint</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_CancellationNumber__c</fullName>
        <description>Cancellation Number</description>
        <inlineHelpText>Cancellation Number</inlineHelpText>
        <label>Cancellation Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Cancellation_Description__c</fullName>
        <description>Denotes the description for a line cancelation</description>
        <inlineHelpText>Denotes the description for a line cancelation</inlineHelpText>
        <label>Cancellation Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Code_Group__c</fullName>
        <formula>SVMXC__Service_Order__r.Code_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CompletionFaultCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completion Code</label>
        <referenceTo>SMAX_PS_Fault_Code__c</referenceTo>
        <relationshipLabel>Work Details (Completion Fault Code)</relationshipLabel>
        <relationshipName>Work_Details_Completions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Completion_Code__c</fullName>
        <description>Completion Codes</description>
        <inlineHelpText>Completion Codes</inlineHelpText>
        <label>Completion Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JC01 ~ Job Completed</fullName>
                </value>
                <value>
                    <fullName>JC02 ~ Additional Parts Required</fullName>
                </value>
                <value>
                    <fullName>JC03 ~ Confidence Testing</fullName>
                </value>
                <value>
                    <fullName>JC04 ~ Customer Action Required</fullName>
                </value>
                <value>
                    <fullName>JC05 ~ Defective Spare Parts</fullName>
                </value>
                <value>
                    <fullName>JC06 ~ Further Troubleshooting Required</fullName>
                </value>
                <value>
                    <fullName>JC07 ~ Insufficient Technical Information</fullName>
                </value>
                <value>
                    <fullName>JC08 ~ Insufficient Time to Complete</fullName>
                </value>
                <value>
                    <fullName>JC09 ~ Insufficient Training</fullName>
                </value>
                <value>
                    <fullName>JC10 ~ Intermittent Problem</fullName>
                </value>
                <value>
                    <fullName>JC12 ~ Parts Availability Delay</fullName>
                </value>
                <value>
                    <fullName>JC13 ~ Tools &amp; Jigs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Concat_Part_Work_Description__c</fullName>
        <label>Concat Part + Work Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ContractPercentDiscount__c</fullName>
        <description>Contract Percent Discount</description>
        <inlineHelpText>Contract Percent Discount</inlineHelpText>
        <label>Contract Discount</label>
        <precision>12</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Discount_Percentage__c</fullName>
        <formula>IF(TEXT(SMAX_PS_ServicePercentAdjustmentType__c)==&quot;Discount&quot;,(0.01 * SMAX_PS_ServicePercentAdjustment__c), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_EInvoice_Code_1__c</fullName>
        <label>E-Invoice Code 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_EInvoice_Code_2__c</fullName>
        <label>E-Invoice Code 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_EInvoice_Code_3__c</fullName>
        <label>E-Invoice Code 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Fault_Code_Action__c</fullName>
        <label>Fault Code Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advised~AC01</fullName>
                </value>
                <value>
                    <fullName>Adjusted~AC02</fullName>
                </value>
                <value>
                    <fullName>Aligned~AC03</fullName>
                </value>
                <value>
                    <fullName>Calibrated~AC04</fullName>
                </value>
                <value>
                    <fullName>Cleaned~AC05</fullName>
                </value>
                <value>
                    <fullName>Customer Action Required~AC06</fullName>
                </value>
                <value>
                    <fullName>Follow Up Required~AC07</fullName>
                </value>
                <value>
                    <fullName>Lubricated~AC08</fullName>
                </value>
                <value>
                    <fullName>Monitored~AC09</fullName>
                </value>
                <value>
                    <fullName>Rebuilt~AC10</fullName>
                </value>
                <value>
                    <fullName>Reconfigured~AC11</fullName>
                </value>
                <value>
                    <fullName>Referred to Specialist~AC12</fullName>
                </value>
                <value>
                    <fullName>Reload Software~AC13</fullName>
                </value>
                <value>
                    <fullName>Repaired Item~AC14</fullName>
                </value>
                <value>
                    <fullName>Replaced~AC15</fullName>
                </value>
                <value>
                    <fullName>Reseat / Reconnected~AC16</fullName>
                </value>
                <value>
                    <fullName>Reset Power~AC17</fullName>
                </value>
                <value>
                    <fullName>Resoldered~AC18</fullName>
                </value>
                <value>
                    <fullName>Routine Maintenance~AC19</fullName>
                </value>
                <value>
                    <fullName>SDB Modification~AC20</fullName>
                </value>
                <value>
                    <fullName>Tested~AC21</fullName>
                </value>
                <value>
                    <fullName>Tightened~AC22</fullName>
                </value>
                <value>
                    <fullName>Trained / Instructed~AC23</fullName>
                </value>
                <value>
                    <fullName>Updated to Latest Version~AC24</fullName>
                </value>
                <value>
                    <fullName>Upgraded~AC25</fullName>
                </value>
                <value>
                    <fullName>Verified~AC26</fullName>
                </value>
                <value>
                    <fullName>Scheduled Event~AC27</fullName>
                </value>
                <value>
                    <fullName>Reprogrammed~AC28</fullName>
                </value>
                <value>
                    <fullName>Return to Vendor~AC30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Fault_Code_Complaint_Required__c</fullName>
        <description>Gets the related Fault Code complaint required field and sets this. Can&apos;t use formula field as we need this as a rollup.</description>
        <label>Fault Code Complaint Required</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Fault_Code_Description__c</fullName>
        <description>The Description of the Fault Code</description>
        <label>Problem Notes</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Fault_Code_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Problem Group</label>
        <referenceTo>SMAX_PS_Fault_Code_Group__c</referenceTo>
        <relationshipLabel>Work Details</relationshipLabel>
        <relationshipName>Work_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Fault_Code_Product_Family__c</fullName>
        <formula>IF(LEN(TEXT(SVMXC__Service_Order__r.SVMXC__Component__r.SVMXC__Product__r.Family)) = 5,  RIGHT(TEXT(SVMXC__Service_Order__r.SVMXC__Component__r.SVMXC__Product__r.Family), 2) , 
RIGHT(TEXT(SVMXC__Service_Order__r.SVMXC__Component__r.SVMXC__Product__r.Family), 3 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fault Code Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Fault_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link from Fault Code to Work Detail</description>
        <label>Problem Code</label>
        <referenceTo>SMAX_PS_Fault_Code__c</referenceTo>
        <relationshipLabel>Work Details</relationshipLabel>
        <relationshipName>Work_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Install_Problem_Code_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is true if the Problem Code is required.</description>
        <inlineHelpText>This field is true if the Problem Code is required.</inlineHelpText>
        <label>Install Problem Code Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_InstallationFaultCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Install Code</label>
        <referenceTo>SMAX_PS_Fault_Code__c</referenceTo>
        <relationshipLabel>Work Details (Installation Fault Code)</relationshipLabel>
        <relationshipName>Work_Details_Installations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Installation_Code__c</fullName>
        <description>Installation Codes</description>
        <inlineHelpText>Installation Codes</inlineHelpText>
        <label>Installation Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IN01 ~ Application Problems</fullName>
                </value>
                <value>
                    <fullName>IN02 ~ Computer problem PKI</fullName>
                </value>
                <value>
                    <fullName>IN03 ~ Customer site unready or problem</fullName>
                </value>
                <value>
                    <fullName>IN04 ~ Delivery Incomplete</fullName>
                </value>
                <value>
                    <fullName>IN05 ~ Installation with no problem</fullName>
                </value>
                <value>
                    <fullName>IN06 ~ Major Adjustment</fullName>
                </value>
                <value>
                    <fullName>IN07 ~ Major parts replacement</fullName>
                </value>
                <value>
                    <fullName>IN08 ~ Major repair carried out</fullName>
                </value>
                <value>
                    <fullName>IN09 ~ Minor installation problem-no follow up</fullName>
                </value>
                <value>
                    <fullName>IN10 ~ Sales Order Incorrect/Incomplete</fullName>
                </value>
                <value>
                    <fullName>IN11 ~ Shipping Damage</fullName>
                </value>
                <value>
                    <fullName>IN12 ~ Accessory Problem</fullName>
                </value>
                <value>
                    <fullName>IN13 ~ Software Issue PKI</fullName>
                </value>
                <value>
                    <fullName>IN14 ~ Software Issue non-PKI</fullName>
                </value>
                <value>
                    <fullName>IN15 ~ Computer problem non-PKI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_IntegrationStatus__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_IntegrationStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Is_Calibrated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes that a calibrated tool is calibrated</description>
        <inlineHelpText>Denotes that a calibrated tool is calibrated</inlineHelpText>
        <label>Is Calibrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Is_Entitled_By_Warranty__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field mapped via literal from work order header on debrief. Used in validation rule in Work Order Debrief</description>
        <inlineHelpText>Field mapped via literal from work order header on debrief. Used in validation rule in Work Order Debrief</inlineHelpText>
        <label>Is Entitled By Warranty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Material_Part_Description__c</fullName>
        <description>Part Description value that end user can manually input product name</description>
        <inlineHelpText>Part Description value that end user can manually input product name</inlineHelpText>
        <label>Material Part Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_My_Work_Detail_Line__c</fullName>
        <formula>IF( $User.Id == SVMXC__Service_Order__r.OwnerId &amp;&amp; (Today() - DATEVALUE(CreatedDate)) &lt;= 90 , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Work Detail Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Next_Calibration_Date__c</fullName>
        <description>Used in calibrated tool tracking on work order debrief to help ensure the calibration is valid.</description>
        <label>Next Calibration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Offline_Currency__c</fullName>
        <description>Currency Code copied from Product Stock or Product Sales. Must match Work Detail Currency Code to use Offline Pricing.</description>
        <inlineHelpText>Currency Code copied from Product Stock or Product Sales. Must match Work Detail Currency Code to use Offline Pricing.</inlineHelpText>
        <label>Offline Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Offline_Price__c</fullName>
        <description>Price used for Offline calculation, copied from Product Stock or Product Sales records.</description>
        <inlineHelpText>Price used for Offline calculation, copied from Product Stock or Product Sales records.</inlineHelpText>
        <label>Offline Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Offline_SalesOrg__c</fullName>
        <description>Sales Org copied from Product Sales or Product Stock for use with Offline Pricing.</description>
        <inlineHelpText>Sales Org copied from Product Sales or Product Stock for use with Offline Pricing.</inlineHelpText>
        <label>Offline Sales Org</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Part_Number__c</fullName>
        <description>Displays the Part number from the Product Stock record</description>
        <inlineHelpText>Displays the Part number from the Product Stock record</inlineHelpText>
        <label>Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Parts_Qty__c</fullName>
        <description>Denotes the quantity of submitted lines of line type parts</description>
        <inlineHelpText>Denotes the quantity of submitted lines of line type parts</inlineHelpText>
        <label>Parts Submitted Qty</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Problem_Group_Name__c</fullName>
        <description>Problem Group Name is used in the Work Order Debrief  to support validation for Entitled Warranty and Super Business Unit</description>
        <inlineHelpText>Problem Group Name is used in the Work Order Debrief  to support validation for Entitled Warranty and Super Business Unit</inlineHelpText>
        <label>Problem Group Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Product_Family__c</fullName>
        <description>Formula field used to display the Product Family field used for reporting purposes</description>
        <formula>TEXT(SVMXC__Product__r.Family)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field used to display the Product Family field used for reporting purposes</inlineHelpText>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Product_Type__c</fullName>
        <description>The Product Type of the associated Part.  Needed for Offline Pricing.</description>
        <inlineHelpText>The Product Type of the associated Part.  Needed for Offline Pricing.</inlineHelpText>
        <label>Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ReplacementBasePrice__c</fullName>
        <description>Replacement Base Price</description>
        <inlineHelpText>Replacement Base Price</inlineHelpText>
        <label>Replacement Base Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_ActivityType__c</fullName>
        <label>SAP Activity Type</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_Confirmation__c</fullName>
        <label>SAP Confirmation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Senior_Technician__c</fullName>
        <description>Indicates that this Work Detail line was performed by the Senior Technician. If the Technician of this Work Detail is the same as the Technician assigned to the Work Order, then this box is checked.</description>
        <formula>IF(SVMXC__Group_Member__r.Id=SVMXC__Service_Order__r.SVMXC__Group_Member__r.Id, TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates that this Work Detail line was performed by the Senior Technician. If the Technician of this Work Detail is the same as the Technician assigned to the Work Order, then this box is checked.</inlineHelpText>
        <label>Senior Technician</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ServiceAmountAdjustmentType__c</fullName>
        <description>Service Amount Adjustment Type</description>
        <inlineHelpText>Service Amount Adjustment Type</inlineHelpText>
        <label>Service Amount Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Uplift</fullName>
                </value>
                <value>
                    <fullName>Discount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_ServiceAmountAdjustment__c</fullName>
        <description>Service Amount Adjustment</description>
        <inlineHelpText>Service Amount Adjustment</inlineHelpText>
        <label>Service Amount Adjustment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ServicePercentAdjustmentType__c</fullName>
        <description>Service Percent Adjustment Type</description>
        <inlineHelpText>Service Percent Adjustment Type</inlineHelpText>
        <label>Service Percent Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Uplift</fullName>
                </value>
                <value>
                    <fullName>Discount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_ServicePercentAdjustment__c</fullName>
        <description>Service Percent Adjustment</description>
        <inlineHelpText>Service Percent Adjustment</inlineHelpText>
        <label>Service Percent Adjustment</label>
        <precision>12</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SubmitTxnId__c</fullName>
        <description>System generated identifier for the Submit Transaction.. used to prevent duplicate processing.</description>
        <externalId>true</externalId>
        <inlineHelpText>System generated identifier for the Submit Transaction.. used to prevent duplicate processing.</inlineHelpText>
        <label>Submit Transaction Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Super_Business_Unit__c</fullName>
        <description>Text field to pull the detail from the work order header using a literal on the debrief. This is used to support a validation rule for fault codes in the Debrief SFM</description>
        <inlineHelpText>Text field to pull the detail from the work order header using a literal on the debrief. This is used to support a validation rule for fault codes in the Debrief SFM</inlineHelpText>
        <label>Super Business Unit</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Tool_Notes__c</fullName>
        <description>Used to capture additional details on a calibrated tool line in work order debrief.</description>
        <label>Tool Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Total_List_Price__c</fullName>
        <description>Calculates price of line before any discounts.</description>
        <formula>SVMXC__Actual_Quantity2__c * SVMXC__Actual_Price2__c</formula>
        <label>Total List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Total_Time__c</fullName>
        <description>Allows the Technician to enter the Total hours consumed.</description>
        <inlineHelpText>Allows the Technician to enter the Total hours consumed.</inlineHelpText>
        <label>Total Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Translation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Translation</label>
        <referenceTo>SMAX_PS_Translation__c</referenceTo>
        <relationshipLabel>Work Details</relationshipLabel>
        <relationshipName>Work_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Travel_Labor_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Product Sales</description>
        <inlineHelpText>Lookup to Product Sales</inlineHelpText>
        <label>Travel/Labor Product</label>
        <referenceTo>SMAX_PS_ProductSales__c</referenceTo>
        <relationshipLabel>Work Details</relationshipLabel>
        <relationshipName>Work_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_UOM_Code__c</fullName>
        <description>Unit of Measurement code</description>
        <inlineHelpText>Unit of Measurement code</inlineHelpText>
        <label>UOM Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_UnitOfMeasure__c</fullName>
        <label>Unit Of Measure</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Use_Product_Sales_UOM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this checkbox is true, the Product Sales UOM is used.</description>
        <inlineHelpText>If this checkbox is true, the Product Sales UOM is used.</inlineHelpText>
        <label>Use Product Sales UOM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_WO_Created_Date__c</fullName>
        <label>WO Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_WorkSummary__c</fullName>
        <label>Work Summary</label>
        <length>40</length>
        <type>Text</type>
    </fields>
</CustomObject>